Try to stabilize test